--- a/dev-random2/templates/includes/sidebar.html
+++ b/dev-random2/templates/includes/sidebar.html
@@ -4,9 +4,9 @@
             <h3>Pages</h3>
             <ul>
               <li><a href="{{ SITEURL }}">Accueil</a></li>
-              <li><a href="{{ SITEURL }}/categories.html">Catégories</a></li>
-              <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
-              <li><a href="{{ SITEURL }}/tags.html">Mots-clés</a></li>
+              <li><a href="{{ SITEURL }}/categories.html">Categorias</a></li>
+              <li><a href="{{ SITEURL }}/archives.html">Arquivos</a></li>
+              <li><a href="{{ SITEURL }}/tags.html">Tags</a></li>
             {% if MENUITEMS %}
               {% for name, uri in MENUITEMS %}
               <li><a href="{{ uri|format(SITEURL)}}">{{ name }}</a></li>
@@ -22,7 +22,7 @@
 
           {% if categories %}
           <nav>
-            <h3>Catégories</h3>
+            <h3>Categorias</h3>
             <ul>
             {% for cat, null in categories %}
               <li{%- if cat == category %} class="active"{% endif -%}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
@@ -32,7 +32,7 @@
           {% endif %}
 
           <nav>
-            <h3>Liens</h3>
+            <h3>Links</h3>
             <ul>
             {% if FEED_ATOM %}
               <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}">Flux ATOM</a></li>
