--- a/dev-random2/templates/tag.html
+++ b/dev-random2/templates/tag.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block title %}{{ super() }} — Articles avec le mot clé « {{ tag }} »{% endblock %}
+{% block title %}{{ super() }} — Artigos com a tag « {{ tag }} »{% endblock %}
 
-{% block index_title %}Articles avec le mot clé « {{ tag }} » :{% endblock %}
+{% block index_title %}Artigos com a tag « {{ tag }} » :{% endblock %}
 
