--- a/dev-random2/templates/author.html
+++ b/dev-random2/templates/author.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
 
-{% block title %}{{ super() }} — Articles de {{ author }}{% endblock %}
+{% block title %}{{ super() }} — Artigos de {{ author }}{% endblock %}
 
-{% block index_title %}Articles de <i>{{ author }}</i> :{% endblock %}
+{% block index_title %}Artigos de <i>{{ author }}</i> :{% endblock %}
