--- a/dev-random2/templates/categories.html
+++ b/dev-random2/templates/categories.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}{{ super() }} — Catégories{% endblock title %}
+{% block title %}{{ super() }} — Categorias{% endblock title %}
 
 {%- block content %}
     <section class="content">
-      <h1>Catégories</h1>
+      <h1>Categorias</h1>
       <ul id="category-list">
       {% for category, n in categories %}
-      <li><a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ n|count }} articles)</li>
+      <li><a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ n|count }} artigos)</li>
       {% endfor %}
       </ul>
     </section>
