--- a/dev-random2/templates/category.html
+++ b/dev-random2/templates/category.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
 
-{% block title %}{{ super() }} — Articles dans la catégorie «{{ category }}»{% endblock %}
+{% block title %}{{ super() }} — Posts na categoria «{{ category }}»{% endblock %}
 
-{% block index_title %}Articles dans la catégorie <i>«{{ category }}»</i> :{% endblock %}
+{% block index_title %}Posts na categoria <i>«{{ category }}»</i> :{% endblock %}
